--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Power Start Energy - SPDA, Reparos, Manutenção e Instalação de Equipamentos elétricos, eletrônicos, instrumentação e Automação na Residencial e Industrial</title>
+    <meta
+    name="description"
+    content="Empresa especializada em SPDA, Reparos, Manutenção e Instalação de Equipamentos elétricos, eletrônicos, instrumentação e Automação na Residencial e Industrial"
+  />
   </head>
   <body>
     <div id="root"></div>
